--- a/01-hello-world/index.html
+++ b/01-hello-world/index.html
@@ -6,10 +6,12 @@
   </head>
 
   <body>
-    <b>Hello world</b>
-    <br>1) git repository 
-    <br>2) first file and first folder 
-    <br>3) Hello world on js and html 
+    <h1>Hello world</h1>
+    <ol>
+      <li> git repository </li>
+      <li> first file and first folder</li>
+      <li> Hello world on js and html</li>
+    </ol>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
